[gd_scene load_steps=9 format=3 uid="uid://brguepel0j1o4"]

[ext_resource type="Script" uid="uid://cubaa0k5uj4y5" path="res://Scripts/UI/left_side_pick.gd" id="1_apbam"]
[ext_resource type="Script" uid="uid://btro5hl2gm58b" path="res://human_ai_select.gd" id="1_xxbwn"]
[ext_resource type="Texture2D" uid="uid://bfnrc17sopmbw" path="res://Assets/UI/Human_Icon.png" id="2_xxbwn"]
[ext_resource type="Texture2D" uid="uid://cdhuagmf177m0" path="res://Assets/UI/scroll.png" id="3_33d1x"]
[ext_resource type="Texture2D" uid="uid://d2m7eeuovq7fl" path="res://Assets/UI/Robot_Icon.png" id="3_bkusi"]
[ext_resource type="Script" uid="uid://55va4sgltti8" path="res://Scripts/map_selector.gd" id="5_bkusi"]
[ext_resource type="Theme" uid="uid://b2cu144l1almb" path="res://Button_Theem.tres" id="6_115jq"]
[ext_resource type="FontFile" uid="uid://detd1i5on3er0" path="res://Assets/fonts/Deutsch.ttf" id="7_0vyn2"]

[node name="Human AI select" type="Control" node_paths=PackedStringArray("player_select_one", "player_select_two")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxbwn")
player_select_one = NodePath("Left Side Pick")
player_select_two = NodePath("Right Side Pick")

[node name="Left Side Pick" type="Control" parent="." node_paths=PackedStringArray("human_icon", "ai_icon", "line_edit", "file_picker", "file_dialog")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apbam")
human_icon = NodePath("VBoxContainer/Human_Icon")
ai_icon = NodePath("VBoxContainer/AI_Icon")
line_edit = NodePath("VBoxContainer/HBoxContainer2/LineEdit")
file_picker = NodePath("VBoxContainer/HBoxContainer2/file_picker")
file_dialog = NodePath("FileDialog")

[node name="ColorRect" type="TextureRect" parent="Left Side Pick"]
layout_mode = 0
offset_left = 40.0
offset_top = 152.0
offset_right = 1064.0
offset_bottom = 664.0
scale = Vector2(0.5, 0.6)
texture = ExtResource("3_33d1x")

[node name="VBoxContainer" type="VBoxContainer" parent="Left Side Pick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 36.0
offset_right = 135.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2

[node name="Human_Icon" type="Sprite2D" parent="Left Side Pick/VBoxContainer"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(136, -56)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_xxbwn")

[node name="AI_Icon" type="Sprite2D" parent="Left Side Pick/VBoxContainer"]
position = Vector2(136, -56)
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_bkusi")

[node name="HBoxContainer2" type="HBoxContainer" parent="Left Side Pick/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Left Side Pick/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.5
placeholder_text = "Open file..."
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
selecting_enabled = false

[node name="file_picker" type="Button" parent="Left Side Pick/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "..."

[node name="HBoxContainer" type="HBoxContainer" parent="Left Side Pick/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Human" type="Button" parent="Left Side Pick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Human"

[node name="AI" type="Button" parent="Left Side Pick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "AI
"

[node name="FileDialog" type="FileDialog" parent="Left Side Pick"]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="Right Side Pick" type="Control" parent="." node_paths=PackedStringArray("human_icon", "ai_icon", "line_edit", "file_picker", "file_dialog")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apbam")
is_player_1 = false
human_icon = NodePath("VBoxContainer/Human_Icon")
ai_icon = NodePath("VBoxContainer/AI_Icon")
line_edit = NodePath("VBoxContainer/HBoxContainer2/LineEdit")
file_picker = NodePath("VBoxContainer/HBoxContainer2/file_picker")
file_dialog = NodePath("FileDialog")

[node name="ColorRect2" type="TextureRect" parent="Right Side Pick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -164.0
offset_right = 776.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.6)
texture = ExtResource("3_33d1x")

[node name="VBoxContainer" type="VBoxContainer" parent="Right Side Pick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 36.0
offset_right = 135.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2

[node name="Human_Icon" type="Sprite2D" parent="Right Side Pick/VBoxContainer"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(136, -56)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_xxbwn")

[node name="AI_Icon" type="Sprite2D" parent="Right Side Pick/VBoxContainer"]
position = Vector2(136, -56)
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_bkusi")

[node name="HBoxContainer2" type="HBoxContainer" parent="Right Side Pick/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Right Side Pick/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.5
placeholder_text = "Open file..."
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
selecting_enabled = false

[node name="file_picker" type="Button" parent="Right Side Pick/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "..."

[node name="HBoxContainer" type="HBoxContainer" parent="Right Side Pick/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Human" type="Button" parent="Right Side Pick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Human"

[node name="AI" type="Button" parent="Right Side Pick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "AI
"

[node name="FileDialog" type="FileDialog" parent="Right Side Pick"]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 64.0
text = "Back"

[node name="Go" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 512.0
offset_right = 640.0
offset_bottom = 576.0
theme = ExtResource("6_115jq")
text = "Fight"

[node name="MapPicker" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 512.0
offset_right = 902.0
offset_bottom = 575.0
script = ExtResource("5_bkusi")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 1008.0
offset_bottom = 171.0
theme = ExtResource("6_115jq")
theme_override_fonts/font = ExtResource("7_0vyn2")
theme_override_font_sizes/font_size = 48
text = "In the land of ApocaWarlords...."
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 224.0
offset_right = 344.0
offset_bottom = 259.0
theme = ExtResource("6_115jq")
theme_override_fonts/font = ExtResource("7_0vyn2")
theme_override_font_sizes/font_size = 32
text = "The Kingdom of..."
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 232.0
offset_right = 928.0
offset_bottom = 267.0
theme = ExtResource("6_115jq")
theme_override_fonts/font = ExtResource("7_0vyn2")
theme_override_font_sizes/font_size = 32
text = "The Kingdom of..."
horizontal_alignment = 1
autowrap_mode = 1

[connection signal="pressed" from="Left Side Pick/VBoxContainer/HBoxContainer2/file_picker" to="Left Side Pick" method="_on_file_picker_pressed"]
[connection signal="pressed" from="Left Side Pick/VBoxContainer/HBoxContainer/Human" to="Left Side Pick" method="_on_human_pressed"]
[connection signal="pressed" from="Left Side Pick/VBoxContainer/HBoxContainer/AI" to="Left Side Pick" method="_on_ai_pressed"]
[connection signal="pressed" from="Right Side Pick/VBoxContainer/HBoxContainer2/file_picker" to="Right Side Pick" method="_on_file_picker_pressed"]
[connection signal="pressed" from="Right Side Pick/VBoxContainer/HBoxContainer/Human" to="Right Side Pick" method="_on_human_pressed"]
[connection signal="pressed" from="Right Side Pick/VBoxContainer/HBoxContainer/AI" to="Right Side Pick" method="_on_ai_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Go" to="." method="_on_go_pressed"]
